<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"

              android:layout_height="match_parent">
    <include layout="@layout/nav_layout"/>
    <LinearLayout style="@style/match_parent" android:orientation="vertical">
        <LinearLayout
                android:id="@+id/about_layout"
                style="@style/match_parent"
                android:layout_weight="50"
                android:background="@color/about_bg"
                android:tag="0"
                android:orientation="vertical">
            <LinearLayout
                    android:paddingTop="@dimen/dp_24"
                    style="@style/w_match_layout"
                    android:background="@color/about_bg"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/dp_12"
                        android:id="@+id/nav_title"
                        android:text="@string/app_name"
                        android:layout_centerVertical="true"
                        android:textColor="@color/item_txt_color"
                        android:textSize="20dp"
                        android:gravity="center"/>
                <TextView
                        android:layout_below="@id/nav_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dp_12"
                        android:id="@+id/version_txt"
                        android:text="@string/about_item_1_1"
                        android:layout_centerVertical="true"
                        android:textColor="@color/item_txt_color"
                        android:textSize="@dimen/dp_14"
                        android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                    style="@style/h_match_layout"
                    android:orientation="vertical">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/dp_12"
                        android:id="@+id/content_txt"
                        android:text="@string/about_item_1"
                        android:textColor="@color/item_txt_color"
                        android:textSize="14dp"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                style="@style/match_parent"
                android:layout_weight="50"
                android:orientation="vertical"
                android:background="@color/main_bottom">
            <LinearLayout
                    style="@style/a_1_item_layout">
                <TextView
                        android:id="@+id/xuanxiang_1"
                        android:tag="1"
                        style="@style/a_2_item_layout"
                        android:text="@string/about_item_1"/>
                <View style="@style/h_match_layout"
                      android:layout_width="1px"
                      android:background="@color/gray"/>
                <TextView
                        android:id="@+id/xuanxiang_2"
                        android:tag="2"
                        style="@style/a_2_item_layout"
                        android:text="@string/about_item_2"/>
                <View style="@style/h_match_layout"
                      android:layout_width="1px"
                      android:background="@color/gray"/>
                <TextView
                        android:id="@+id/xuanxiang_3"
                        android:tag="3"
                        style="@style/a_2_item_layout"
                        android:text="@string/about_item_3"/>
            </LinearLayout>
            <View style="@style/w_match_layout"
                  android:layout_height="1px"
                  android:background="@color/gray"/>
            <LinearLayout
                    style="@style/a_1_item_layout">
                <TextView
                        android:id="@+id/xuanxiang_4"
                        android:tag="4"
                        style="@style/a_2_item_layout"
                        android:text="@string/about_item_4"/>
                <View style="@style/h_match_layout"
                      android:layout_width="1px"
                      android:background="@color/gray"/>
                <TextView
                        android:id="@+id/xuanxiang_5"
                        android:tag="5"
                        style="@style/a_2_item_layout"
                        android:text="@string/about_item_5"/>
                <View style="@style/h_match_layout"
                      android:layout_width="1px"
                      android:background="@color/gray"/>
                <TextView
                        android:id="@+id/xuanxiang_6"
                        android:tag="6"
                        style="@style/a_2_item_layout"
                        android:text="@string/about_item_6"/>
            </LinearLayout>
            <View style="@style/w_match_layout"
                  android:layout_height="1px"
                  android:background="@color/gray"/>
            <LinearLayout
                    style="@style/a_1_item_layout">
                <TextView
                        android:id="@+id/xuanxiang_7"
                        android:tag="7"
                        style="@style/a_2_item_layout"
                        android:text="@string/about_item_7"/>
                <View style="@style/h_match_layout"
                      android:layout_width="1px"
                      android:background="@color/gray"/>
                <TextView
                        android:id="@+id/xuanxiang_8"
                        android:tag="8"
                        style="@style/a_2_item_layout"
                        android:text="@string/about_item_10"/>
                <View style="@style/h_match_layout"
                      android:layout_width="1px"
                      android:background="@color/gray"/>
                <TextView
                        android:id="@+id/xuanxiang_9"
                        android:tag="9"
                        style="@style/a_2_item_layout"
                        android:text="@string/about_item_9"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>