<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/alert_dialog_layout"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@drawable/bg_top_line"
              android:layout_height="wrap_content">

    <TextView
            style="@style/match_parent"
            android:paddingLeft="15dp"
            android:paddingTop="25dp"
            android:paddingBottom="25dp"
            android:paddingRight="15dp"
            android:id="@+id/title_txt"
            android:layout_height="wrap_content"
            android:textColor="@color/item_txt_color"
            android:gravity="center"
            android:text="@string/placeholder_string"
            android:textSize="@dimen/dp_16"/>

    <View
            android:layout_width="fill_parent"
            android:layout_height="2px"
            android:background="@color/gray"/>



    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pwd_btn_layout">

        <Button
                android:id="@+id/cancel_btn"
                style="@style/big_button"
                android:layout_weight="0.5"
                android:layout_marginTop="0dp"
                android:text="@string/main_cancel"/>

        <View
                android:id="@+id/view_line"
                android:layout_width="1px"
                android:layout_height="fill_parent"
                android:background="@color/gray"/>

        <Button
                android:id="@+id/ok_btn"
                style="@style/big_button"
                android:layout_weight="0.5"
                android:layout_marginTop="0dp"
                android:text="@string/main_confirm"/>
    </LinearLayout>

</LinearLayout>