<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:fitsSystemWindows="true"
              style="@style/match_parent">
    <RelativeLayout
            android:background="@drawable/main_top_bg"
            style="@style/w_match_layout"
            android:layout_height="@dimen/dp_48">
        <Button
                android:id="@+id/about_btn"
                style="@style/layout_48dp"
                android:background="@drawable/about"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <LinearLayout
            style="@style/match_parent"
            android:orientation="vertical">
        <LinearLayout
                style="@style/match_parent"
                android:layout_weight="50"
                android:background="@drawable/main_center_bg"
                android:gravity="bottom"
                android:orientation="vertical" android:weightSum="1">
            <LinearLayout
                    style="@style/match_parent"
                    android:background="@drawable/main_center_bg"
                    android:gravity="center" android:layout_weight="1">
                <LinearLayout
                        android:layout_width="@dimen/dp_240"
                        android:layout_height="@dimen/dp_240"
                        android:background="@drawable/center_bg">
                    <RelativeLayout
                            android:id="@+id/signal_layout"
                            android:layout_width="@dimen/dp_240"
                            android:layout_height="@dimen/dp_240"
                            android:background="@drawable/signal_0">
                        <LinearLayout
                                android:id="@+id/img_layout"
                                style="@style/match_parent"
                                android:layout_centerVertical="true"
                                android:orientation="vertical"
                                android:gravity="center">
                            <LinearLayout
                                    android:visibility="gone"
                                    android:id="@+id/state_layout"
                                    style="@style/wrap_content"
                                    android:gravity="center"
                                    android:orientation="vertical"
                                    android:layout_marginBottom="@dimen/dp_36">
                                <ImageView
                                        android:id="@+id/state_img"
                                        android:layout_width="@dimen/dp_80"
                                        android:layout_height="@dimen/dp_80"
                                        android:background="@drawable/error_icon"/>
                                <TextView
                                        android:id="@+id/ware_txt"
                                        style="@style/wrap_content"
                                        android:textColor="@color/white"
                                        android:text="未开启"/>
                            </LinearLayout>

                            <TextView
                                    android:visibility="visible"
                                    android:id="@+id/signal_txt"
                                    style="@style/wrap_content"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/dp_80"
                                    android:layout_marginBottom="@dimen/dp_16"
                                    android:text="80"/>


                        </LinearLayout>
                        <TextView
                                android:id="@+id/state_txt"
                                style="@style/wrap_content"
                                android:gravity="center"
                                android:layout_height="@dimen/dp_18"
                                android:layout_width="@dimen/dp_56"
                                android:background="@drawable/edit_input_focused"
                                android:layout_centerHorizontal="true"
                                android:layout_alignParentBottom="true"
                                android:textColor="@color/gray"
                                android:layout_marginBottom="@dimen/dp_36"
                                android:text="@string/no_start"/>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                    style="@style/w_match_layout"
                    android:background="@color/main_top_bottom"
                    android:gravity="center"
                    android:layout_height="@dimen/dp_24">
                <TextView
                        android:id="@+id/msg_txt"
                        style="@style/wrap_content"
                        android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                style="@style/match_parent"
                android:layout_weight="50"
                android:orientation="vertical"
                android:background="@color/main_bottom">
            <LinearLayout
                    style="@style/b_1_item_layout">
                <LinearLayout
                        style="@style/b_2_item_layout">
                    <Button
                            android:id="@+id/switch_btn"
                            style="@style/b_2_item_imgage_layout"
                            android:tag="close"
                            android:background="@drawable/sense_switch_close"/>
                    <TextView
                            style="@style/b_2_item_txt_layout"
                            android:text="@string/switch_str"/>
                </LinearLayout>
                <View style="@style/h_match_layout"
                      android:layout_width="1px"
                      android:background="@color/gray"/>
                <LinearLayout
                        style="@style/b_2_item_layout">
                    <Button
                            android:id="@+id/startUp_btn"
                            style="@style/b_2_item_imgage_layout"
                            android:background="@drawable/start_up_close"/>
                    <TextView
                            style="@style/b_2_item_txt_layout"
                            android:text="@string/start_up_str"/>
                </LinearLayout>
            </LinearLayout>
            <View style="@style/w_match_layout"
                  android:layout_height="1px"
                  android:background="@color/gray"/>
            <LinearLayout
                    style="@style/b_1_item_layout">
                <LinearLayout
                        style="@style/b_2_item_layout">
                    <Button
                            android:id="@+id/ball_btn"
                            style="@style/b_2_item_imgage_layout"
                            android:background="@drawable/ball_close"/>
                    <TextView
                            style="@style/b_2_item_txt_layout"
                            android:text="@string/ball_str"/>
                </LinearLayout>
                <View style="@style/h_match_layout"
                      android:layout_width="1px"
                      android:background="@color/gray"/>
                <LinearLayout
                        style="@style/b_2_item_layout">
                    <Button
                            android:id="@+id/onlyWins_btn"
                            style="@style/b_2_item_imgage_layout"
                            android:background="@drawable/only_wind_close"/>
                    <TextView
                            style="@style/b_2_item_txt_layout"
                            android:text="@string/only_window_str"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>